<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/back01"
    tools:context=".CommonActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/txtHd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Here are some quick first aid tips on common incidences:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:text="@string/desc1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc2"

            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textSize="14sp"
            android:text="@string/desc4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc5"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc6"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc7"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


</ScrollView>